[package]
name = "pbgen"
description = "mechanically generated protobufs for bigtable, pubsub, and spanner"
version = "0.1.0"
authors = ["Tyler Neely <tyler.neely@ferrous-systems.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
prost = "0.4"
prost-derive = "0.4"
tower-grpc = { git = "https://github.com/tower-rs/tower-grpc" }

[build-dependencies]
tower-grpc-build = { git = "https://github.com/tower-rs/tower-grpc"  }
prost-build = "0.4"

[patch.crates-io]
http = { git = "http://github.com/hyperium/http", rev = "5f362a32278891672f428d570d46387fe6896a5d" }
